--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   </head>
   <body>
     <div id="top-of-page">
-      <!-- <img id="mountains" src="./images/e6d57714479874c665b36c7adee76b1d.svg" /> -->
       <header>
         <nav>
           <div id="logo">
@@ -51,6 +50,7 @@
             spend time together. A place that makes it easy to talk every day
             and hang out more often.
           </div>
+          <i class="fa-solid fa-arrow-down-to-bracket"></i>
           <div>
             <a>Download for Windows</a>
             <a>Open Dicord in your browser</a>
@@ -58,10 +58,54 @@
         </div>
       </div>
     </div>
-    <div id="section1"></div>
-    <div id="section2"></div>
-    <div id="section3"></div>
-    <div id="section4"></div>
+    <div id="section1">
+      <div><img src="./images/46b2132c01604c9493d558de444929f4.svg" /></div>
+      <div>
+        <h1>Create an invite-only place where you belong</h1>
+        <p>
+          Discord servers are organized into topic-based channels where you can
+          collaborate, share, and just talk about your day without clogging up a
+          group chat.
+        </p>
+      </div>
+    </div>
+    <div id="section2">
+      <div>
+        <h1>Where hanging out is easy</h1>
+        <p>
+          Grab a seat in a voice channel when you’re free. Friends in your
+          server can see you’re around and instantly pop in to talk without
+          having to call.
+        </p>
+      </div>
+      <div><img src="./images/575a0322f3b36ca2fecb23ad2c6dd5ad.svg" /></div>
+    </div>
+    <div id="section3">
+      <div><img src="./images/921b1ae33edca174b6ebe787bb8b6c3b.svg" /></div>
+      <div>
+        <h1>From few to a fandom</h1>
+        <p>
+          Get any community running with moderation tools and custom member
+          access. Give members special powers, set up private channels, and
+          more.
+        </p>
+      </div>
+    </div>
+    <div id="section4">
+      <h1>RELIABLE TECH FOR STAYING CLOSE</h1>
+      <p>
+        Low-latency voice and video feels like you’re in the same room. Wave
+        hello over video, watch friends stream their games, or gather up and
+        have a drawing session with screen share.
+      </p>
+      <img src="./images/98ea5b9e92e304c7d352ac462996adc5.svg" />
+    </div>
+    <div id="section5">
+      <h1>Ready to start your journey?</h1>
+      <div id="download-now">
+        <a> Download for Windows</a>
+      </div>
+    </div>
     <div id="footer"></div>
   </body>
 </html>
