--- a/index.html
+++ b/index.html
@@ -106,6 +106,74 @@
         <a> Download for Windows</a>
       </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+      <div id="top-of-footer">
+        <div id="left-block-footer">
+          <div id="title-footer">
+            <h1 style="color: #5865f2" style="margin-top: 0px">
+              IMAGINE A PLACE
+            </h1>
+          </div>
+          <div id="language">
+            <img src="./images/e6d6b255259ac878d00819a9555072ad.png" alt="" />
+            <select>
+              <option>English, USA</option>
+            </select>
+          </div>
+          <div id="links-to-social-media">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+        <div id="right-block-footer">
+          <div id="Product">
+            <div style="color: #5865f2">Product</div>
+            <div><a href="#">Download</a></div>
+            <div><a href="#">Nitro</a></div>
+            <div><a href="#">Status</a></div>
+          </div>
+          <div id="Company">
+            <div style="color: #5865f2">Company</div>
+            <div><a href="#">About</a></div>
+            <div><a href="#">Jobs</a></div>
+            <div><a href="#">Branding</a></div>
+            <div><a href="#">Newsroom</a></div>
+          </div>
+          <div id="Resources">
+            <div style="color: #5865f2">Resources</div>
+            <div><a href="#">College</a></div>
+            <div><a href="#">Support</a></div>
+            <div><a href="#">Safety</a></div>
+            <div><a href="#">Blog</a></div>
+            <div><a href="#">Feedback</a></div>
+            <div><a href="#">Developers</a></div>
+            <div><a href="#">StreamKit</a></div>
+          </div>
+          <div id="Policies">
+            <div style="color: #5865f2">Policies</div>
+            <div><a href="#">Terms</a></div>
+            <div><a href="#">Privacy</a></div>
+            <div><a href="#">Cookie Settings</a></div>
+            <div><a href="#">Guidelines</a></div>
+            <div><a href="#">Acknowledgements</a></div>
+            <div><a href="#">Licenses</a></div>
+            <div><a href="#">Moderation</a></div>
+          </div>
+        </div>
+      </div>
+      <div id="bot-of-footer">
+        <div id="logo">
+          <i
+            id="discord-logo"
+            class="fa-brands fa-discord"
+            style="color: white"
+          ></i>
+          <a href="#">Discord</a>
+        </div>
+        <div id="button-open"><a>Open Discord</a></div>
+      </div>
+    </div>
   </body>
 </html>
